# platform

./: .env.example  .gitignore  CLAUDE.md  CODE_REVIEW.md  METRICS.md  PROJECT_STATUS.md  README.md  SECURITY.md  code_generation.py  pyproject.toml  run.sh  test.py
.beads/: issues.jsonl
Platform/: pyvenv.cfg
config/: default.yaml
docker/: Dockerfile.python  seccomp-profile.json
history/: CODING_ASSISTANT_BLUEPRINT_v2.md  CODING_ASSISTANT_BLUEPRINT_v3.md  INTELLIGENT_CODING_ASSISTANT_DESIGN.md
src/assistant/: config.py  main.py
src/assistant/core/: agent.py  events.py  session.py
src/assistant/prompts/: templates.py
src/assistant/providers/: __init__.py  anthropic.py  base.py
src/assistant/runtimes/: base.py  docker.py  python.py
src/assistant/storage/: base.py
src/assistant/tools/: __init__.py  analyze.py  base.py  execute.py  explain.py  fix.py  generate.py  registry.py
src/assistant/utils/: __init__.py  code.py  validation.py
tests/: test_anthropic_provider.py  test_eventbus.py  test_path_validation.py  test_phase1.py  test_runtime_basic.py  test_runtime_errors.py  test_runtime_pytest.py  test_runtime_security.py  test_security.py  test_session.py  test_tool_analyze.py  test_tool_execute.py  test_tool_explain.py  test_tool_fix.py  test_tool_generate.py  test_tools.py  test_validation.py  test_validation_helpers.py
